Changes for 4.1.1 branch